Improve startup time
xvalid is short lived process so it does make sense to disable
some of the JVM optimizations in order to reduce the startup time.